# NotesApp

./: .env  pyproject.toml
.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
app/: database.py  database_schemas.py  main.py  models.py  utils.py
app/routers/: .sqlhistory  devs.py  dolt.py  notes.py  users.py
dolt/: .sqlhistory  config.yaml
dolt/.dolt/: config.json  sql-server.info
dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
dolt/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
frontend/main_page_notes/: main_page.html  main_page_scripts.js  main_page_styles.css
frontend/registration_auth/: registration.html  registration_scripts.js  registration_styles.css
